# update-poms-to-https

./: .gitignore  README.md  checkout_repos.py  commit_updated_poms.py  pom.xml  pyproject.toml  update_poms.py
